# PipelineLogs

./: .gitignore  CMakeLists.txt  README.md
include/: log_message.hpp  log_message_factory.hpp  renderer.hpp
input/: example-1.txt  example-2.txt  example-3.txt  example-4.txt  simple.txt
src/: log_message.cpp  log_message_factory.cpp  main.cpp  renderer.cpp
